Changed HTML to React-bootstrap and solved some css issues with header and footer

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -387,6 +387,7 @@ a:focus {
   float: left;
   position: relative;
   width: 100%;
+  margin-bottom:-35px;
 }
 
 .home-slider .carousel-inner > .item.active {
