--- a/src/assets/css/contact/get-in-touch.css
+++ b/src/assets/css/contact/get-in-touch.css
@@ -26,6 +26,7 @@ textarea.contact-control {
 }
 .contact-submit-btn {
   margin-top: 10px;
+  padding: 8px 30px !important;
 }
 .icon-img {
   display: block;
