--- a/src/assets/css/admin/sidebar.css
+++ b/src/assets/css/admin/sidebar.css
@@ -43,7 +43,8 @@
   text-transform: capitalize;
   font-family: 'ralewayregular';
 }
-.sidebar-nav-links .list-group-item.active {
+
+.sidebar-nav-links a.active .list-group-item {
   color: #f9a11d !important;
 }
 
