add and update service change

--- a/src/assets/css/admin/site-content/site-content.css
+++ b/src/assets/css/admin/site-content/site-content.css
@@ -236,6 +236,9 @@
     border: none;
     outline: none;
 }
+.edit-service-thumb {
+    cursor: pointer;
+}
 
 .contact-tab-content{
     -moz-border-radius: 3px;
