--- a/public/developer.css
+++ b/public/developer.css
@@ -25,10 +25,10 @@
   margin-right: 5px;
 }
 .portfolio-album-thub-wrap {
-  margin-top: 30px !important;
+  margin-top: 30px;
 }
 .portfolio-album-thub-wrap .overlay {
-  cursor: zoom-in !important;
+  cursor: zoom-in;
 }
 .portfolio-album-thub-wrap .fa-search-plus {
   color: #f9a11d;
