--- a/src/assets/css/admin/video-films/add-video/add-video.css
+++ b/src/assets/css/admin/video-films/add-video/add-video.css
@@ -1,126 +1,129 @@
-.add-videofilms-modal .modal-content{
-    border-radius: 0;
-    border: 0;
+.add-videofilms-modal .modal-content {
+  border-radius: 0;
+  border: 0;
 }
-.add-videofilms-body {  
-    display: -webkit-box;  
-    display: -webkit-flex;  
-    display: -ms-flexbox;  
-    display: flex;
+.add-videofilms-body {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
-.add-videofilms-title-wrap{
-    background: url('../../images/admin-video-films/sidebar.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+.add-videofilms-title-wrap {
+  background: url('../../../../images/admin/video-films/sidebar.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.add-videofilms-content-wrap{
-    padding: 20px 15px;
+.add-videofilms-content-wrap {
+  padding: 20px 15px;
 }
-.add-videofilms-title-details{
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    height: 130px;
-    margin-top: -65px;
-    text-align: center;
-}
-
-.add-videofilms-icon{
-    margin: 0 auto;
-    height: 75px;
-    width: 75px;
-}
-.add-videofilms-text{
-    margin-top: 20px;
-    text-transform: capitalize;
-    font-family: 'ralewaymedium';
-}
-.add-videofilms-form{
-    padding: 10px;
-}
-.close-modal-icon{
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    color: #c1c1c1;
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    z-index: 1;
+.add-videofilms-title-details {
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  height: 130px;
+  margin-top: -65px;
+  text-align: center;
 }
 
-.add-videofilms-submit,.add-videofilms-cancel{
-    padding: 10px 30px;
-    font-family: 'ralewaysemibold';
-    text-transform: uppercase;
-    letter-spacing: 0.02em;
+.add-videofilms-icon {
+  margin: 0 auto;
+  height: 75px;
+  width: 75px;
+}
+.add-videofilms-text {
+  margin-top: 20px;
+  text-transform: capitalize;
+  font-family: 'ralewaymedium';
+}
+.add-videofilms-form {
+  padding: 10px;
+}
+.close-modal-icon {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: #c1c1c1;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  z-index: 1;
+}
+
+.add-videofilms-submit,
+.add-videofilms-cancel {
+  padding: 10px 30px;
+  font-family: 'ralewaysemibold';
+  text-transform: uppercase;
+  letter-spacing: 0.02em;
 }
 .add-videofilms-submit:hover,
-.add-videofilms-submit:focus{
-    background:#feae37;
-    color: #fff;
-    outline: none !important;
-    box-shadow: none;
+.add-videofilms-submit:focus {
+  background: #feae37;
+  color: #fff;
+  outline: none !important;
+  box-shadow: none;
 }
-.add-videofilms-cancel{
-    background: #d7d7d7;
-    margin-left: 20px;
-    color: #555;
+.add-videofilms-cancel {
+  background: #d7d7d7;
+  margin-left: 20px;
+  color: #555;
 }
 .add-videofilms-cancel:hover,
-.add-videofilms-cancel:focus{
-    outline: none !important;
+.add-videofilms-cancel:focus {
+  outline: none !important;
 }
-.videotype-radio-wrap .radio-inline{   
-    width: 32%;    
+.videotype-radio-wrap .radio-inline {
+  width: 32%;
 }
-.hide-show-group{
-    margin-top: -25px;
+.hide-show-group {
+  margin-top: -25px;
 }
 /*form Common css*/
-.custom-form-group{
-    position: relative;
-    font-family: 'ralewayregular';
-    margin-bottom: 25px;
+.custom-form-group {
+  position: relative;
+  font-family: 'ralewayregular';
+  margin-bottom: 25px;
 }
-.custom-form-group.required::after{
-    content:"*";
-    position: absolute;
-    bottom: 30px;
-    right: 20px;
-    display: block;
-    height: 0;
-    width: 0;
-    font-size: 30px;
-    color: #fd6257;
-    font-family: 'ralewaysemibold';
+.custom-form-group.required::after {
+  content: "*";
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
+  display: block;
+  height: 0;
+  width: 0;
+  font-size: 30px;
+  color: #fd6257;
+  font-family: 'ralewaysemibold';
 }
-.custom-form-control{
-    border: 0;
-    box-shadow: none;
-    border-bottom: 1px solid #ccc;
-    border-radius: 0;
-    position: relative;
-}
-
-.custom-form-control:focus, .custom-form-control:active, .custom-form-control:hover{
-    outline: 0;
-    box-shadow: none;
-    border-color: #ccc;
-}
-.custom-form-control-label{
-    text-transform: capitalize;
-    font-weight: normal;
-    color: #555;
-    font-family: 'ralewaysemibold';
-    font-size: 14px;
-    padding-bottom: 5px !important;
+.custom-form-control {
+  border: 0;
+  box-shadow: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+  position: relative;
 }
 
-.custom-radio-wrap{
-    padding: 0;
+.custom-form-control:focus,
+.custom-form-control:active,
+.custom-form-control:hover {
+  outline: 0;
+  box-shadow: none;
+  border-color: #ccc;
 }
-.custom-radio-wrap .check{
+.custom-form-control-label {
+  text-transform: capitalize;
+  font-weight: normal;
+  color: #555;
+  font-family: 'ralewaysemibold';
+  font-size: 14px;
+  padding-bottom: 5px !important;
+}
+
+.custom-radio-wrap {
+  padding: 0;
+}
+.custom-radio-wrap .check {
   display: block;
   position: absolute;
   border: 1px solid #f9a11d;
@@ -153,117 +156,117 @@
   border: 1px solid #f9a11d;
 }
 
-.custom-radio-wrap input[type=radio]:checked ~ .check::before{
+.custom-radio-wrap input[type=radio]:checked ~ .check::before {
   background: #f9a11d;
   display: block;
 }
 
-.custom-radio-wrap input[type=radio]{
+.custom-radio-wrap input[type=radio] {
   position: absolute;
   visibility: hidden;
 }
 
-.custom-radio-wrap .radio-inline{
+.custom-radio-wrap .radio-inline {
   padding-left: 25px;
   padding-right: 25px;
 }
-.custom-radio-wrap .radio-inline small{
-    text-transform: none !important;
-    font-size: 11px;
-    color: #777;
+.custom-radio-wrap .radio-inline small {
+  text-transform: none !important;
+  font-size: 11px;
+  color: #777;
 }
-.custom-form-control .Select-control{
-    border: 0;
+.custom-form-control .Select-control {
+  border: 0;
 }
 .custom-form-control .Select-control:hover,
-.custom-form-control .Select-control:focus{
-    outline: none !important;
-    box-shadow: none;
-    border: none;
+.custom-form-control .Select-control:focus {
+  outline: none !important;
+  box-shadow: none;
+  border: none;
 }
 .custom-form-control .Select-control .Select-placeholder:hover,
-.custom-form-control .Select-control .Select-placeholder:focus{
-    outline: none !important;
-    border: none;
+.custom-form-control .Select-control .Select-placeholder:focus {
+  outline: none !important;
+  border: none;
 }
-.custom-form-control.Select--multi .Select-value{
-    background: #fff;
-    border: 0;
-    color:#555;
+.custom-form-control.Select--multi .Select-value {
+  background: #fff;
+  border: 0;
+  color: #555;
 }
-.custom-form-control.Select--multi .Select-value-icon{
-    float: right;
-    border-right: 0;
+.custom-form-control.Select--multi .Select-value-icon {
+  float: right;
+  border-right: 0;
 }
-.custom-form-control.Select--multi .Select-value-icon:hover{
-    background: #fff;
-    color:#555;
+.custom-form-control.Select--multi .Select-value-icon:hover {
+  background: #fff;
+  color: #555;
 }
-.custom-form-control.is-focused:not(.is-open) > .Select-control{
-    box-shadow: none;
+.custom-form-control.is-focused:not(.is-open) > .Select-control {
+  box-shadow: none;
 }
-
 
 /***************/
 /*Media Queries*/
 /***************/
 
 @media only screen and (max-width: 767px) {
-    .add-videofilms-body{
-       display: block;
-   }
-   .add-videofilms-title-wrap, .add-videofilms-content-wrap{
-       position: relative;
-       float: left;
-       width: 100%;
-   }
-   .add-videofilms-title-wrap{
-       background-size: cover;
-   }
-   .add-videofilms-content-wrap{
-       background: #fff;
-       padding-bottom: 20px;
-   }
-   .add-videofilms-title-details{
-       padding: 20px;
-       position: relative;
-       top: 0;
-       height: auto;
-       margin-top: 0px;
-       text-align: left;
-   }
-   .add-videofilms-icon {
-       margin: 0;
-       float: left;
-       width: 35px;
-       height: 35px;
-   }
-   .add-videofilms-text{
-        width: auto;
-        margin-left: 50px;
-        margin-top: 9px;
-   }
-   .close-modal-icon{
-       color: #fff;
-       top: 27px;
-       right: 10px;
-   }
-    .custom-radio-wrap .radio-inline {
-        padding-bottom: 15px !important;
-    }   
-    .custom-form-group{
-        margin-bottom: 15px !important;
-    } 
-    .radio-wrapper{
-        margin-bottom: 0 !important;
-    }   
-    .hide-show-group {
-        margin-top: -10px;
-    }
+  .add-videofilms-body {
+    display: block;
+  }
+  .add-videofilms-title-wrap,
+  .add-videofilms-content-wrap {
+    position: relative;
+    float: left;
+    width: 100%;
+  }
+  .add-videofilms-title-wrap {
+    background-size: cover;
+  }
+  .add-videofilms-content-wrap {
+    background: #fff;
+    padding-bottom: 20px;
+  }
+  .add-videofilms-title-details {
+    padding: 20px;
+    position: relative;
+    top: 0;
+    height: auto;
+    margin-top: 0px;
+    text-align: left;
+  }
+  .add-videofilms-icon {
+    margin: 0;
+    float: left;
+    width: 35px;
+    height: 35px;
+  }
+  .add-videofilms-text {
+    width: auto;
+    margin-left: 50px;
+    margin-top: 9px;
+  }
+  .close-modal-icon {
+    color: #fff;
+    top: 27px;
+    right: 10px;
+  }
+  .custom-radio-wrap .radio-inline {
+    padding-bottom: 15px !important;
+  }
+  .custom-form-group {
+    margin-bottom: 15px !important;
+  }
+  .radio-wrapper {
+    margin-bottom: 0 !important;
+  }
+  .hide-show-group {
+    margin-top: -10px;
+  }
 }
 
 @media only screen and (max-width: 420px) {
-  .add-videofilms-form{
-       padding: 0;
-   }
+  .add-videofilms-form {
+    padding: 0;
+  }
 }
