--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -33,8 +33,34 @@
 .portfolio-album-thub-wrap .fa-search-plus {
   color: #f9a11d;
 }
+
 /* Portfolio album page custom css start */
 
 div.filepicker {
   padding: 39px !important;
+}
+
+/* changes by binoli */
+.create-video-submit,
+.create-video-cancel {
+  padding: 10px 30px;
+  font-family: 'ralewaysemibold';
+  text-transform: uppercase;
+  letter-spacing: 0.02em;
+}
+.create-video-submit:hover,
+.create-video-submit:focus {
+  background: #feae37;
+  color: #fff;
+  outline: none !important;
+  box-shadow: none;
+}
+.create-video-cancel {
+  background: #d7d7d7;
+  margin-left: 20px;
+  color: #555;
+}
+.create-video-cancel:hover,
+.create-video-cancel:focus {
+  outline: none !important;
 }
