Implement already shared list, delete access and resend album

--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -137,6 +137,22 @@
 .create-video-cancel:focus {
   outline: none !important;
 }
+.text-green {
+  color: #00991a;
+}
+.text-red {
+  color: #e22122;
+}
+.content-wrap .resend a:hover,
+.content-wrap .resend a:focus {
+  color: #00991a;
+  text-decoration: underline;
+}
+.content-wrap .delete a:hover,
+.content-wrap .delete a:focus {
+  color: #e22122;
+  text-decoration: underline;
+}
 /* changes by binoli end */
 
 div.filepicker {
