--- a/src/assets/css/admin/album/albums.css
+++ b/src/assets/css/admin/album/albums.css
@@ -1,220 +1,221 @@
-.albums-page-wrap{
-    font-family: 'ralewayregular';
+.albums-page-wrap {
+  font-family: 'ralewayregular';
 }
-.total-album{
-    font-size: 16px;
-    line-height: 18px;
-    margin-top: 8px;
-    padding-right: 20px;
-    border-right: 1px solid #ccc;
+.total-album {
+  font-size: 16px;
+  line-height: 18px;
+  margin-top: 8px;
+  padding-right: 20px;
+  border-right: 1px solid #ccc;
 }
-.sortBy{
-    margin-right: 15px;
-    float: left;
-    margin-left: 20px;
+.sortBy {
+  margin-right: 15px;
+  float: left;
+  margin-left: 20px;
 }
-.filter-wrap{
-    padding: 20px 0;
+.filter-wrap {
+  padding: 20px 0;
 }
-.add-icon{
-    height: 18px;
-    width: 18px;
-    padding: 0;
-    border-radius: 50%;
-    border: 1px solid #fff;
-    line-height: 16px;
-    font-size: 10px;
-    margin-right: 5px;
-    margin-top: 1px;
-    float: left;
+.add-icon {
+  height: 18px;
+  width: 18px;
+  padding: 0;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  line-height: 16px;
+  font-size: 10px;
+  margin-right: 5px;
+  margin-top: 1px;
+  float: left;
 }
-.create-album-btn{
-    padding: 6px 18px;
-    height: 35px;
-    position: relative;
-    font-size: 16px;
-    text-transform: uppercase;
-    border: 2px solid #f9a11d;
+.create-album-btn {
+  padding: 6px 18px;
+  height: 35px;
+  position: relative;
+  font-size: 16px;
+  text-transform: uppercase;
+  border: 2px solid #f9a11d;
 }
-.create-album-btn:hover, .create-album-btn:focus, .create-album-btn:active, .create-album-btn:active:hover {
-    background:#fff;
-    color: #f9a11d;
-    border: 2px solid #f9a11d;
-    outline: none;
-    box-shadow: none;
+.create-album-btn:hover,
+.create-album-btn:focus,
+.create-album-btn:active,
+.create-album-btn:active:hover {
+  background: #fff;
+  color: #f9a11d;
+  border: 2px solid #f9a11d;
+  outline: none;
+  box-shadow: none;
 }
-.create-album-btn:hover .add-icon, .create-album-btn:focus .add-icon, .create-album-btn:active .add-icon, .create-album-btn:active:hover .add-icon{
-    border: 1px solid #f9a11d;
+.create-album-btn:hover .add-icon,
+.create-album-btn:focus .add-icon,
+.create-album-btn:active .add-icon,
+.create-album-btn:active:hover .add-icon {
+  border: 1px solid #f9a11d;
 }
-.albums-list-wrap{
-    margin-bottom: 30px;
+.albums-list-wrap {
+  margin-bottom: 30px;
 }
-.album-wrap{
-    background: #fff;
-    padding: 20px;
-    box-shadow: 3px 4px 4px #e9e9e9;
-    border-radius: 5px;
-    border: 1px solid #e1e1e1;
-}
-
-.album-title{
-    color:#a36241;
-    text-transform:uppercase;
-    font-family: 'ralewaymedium';
-    padding-right: 50px;
-}
-.album-detail-wrap{
-    padding-left: 10px;
-}
-.album-badges-wrap{
-    padding: 15px 0;
-}
-.album-badge{
-    min-width: 60px;
-    position: relative;
-    float: left;
-    text-align: center;
-    background: #F0F0F0;
-    color: #555;
-    font-size: 11px;
-    margin-right: 5px;
-    border-radius: 5px;
-    padding: 2px 5px;
-    text-transform: capitalize;
-}
-.updated-info{
-    color: #555;
-    font-size:13px;
-    padding:5px 0; 
-}
-.updated-icon{
-    font-size: 14px;
-    color: #555;
-
-}
-.album-separator hr{
-    margin: 15px 0;
-    margin-top: 20px;
-}
-.count-main-wrap{
-    margin-top: 5px;
-    color: #555;
-    width: calc(100% - 210px);
-    float: right;
-    margin-top: -50px;
-}
-.count-wrap{
-    border-right: 1px solid #ccc;
-}
-.photo-wrap{
-    width: 115px;
-    padding: 0;
-    padding-right: 20px;
-}
-.view-count-wrap, .status-wrap{
-    width: 130px;
-    padding: 0 20px;
-}
-.visible-wrap{
-    width: 170px;
-    padding-right: 0;
-    border: 0;
-}
-.visible-wrap .count-num{
-    margin-left: -7px;
-}
-.count-num{
-    margin-top: 8px;
-}
-.count-detail{
-    float: left;
-    width: 100%;
-    position: relative;
-    text-align: center;
-    font-size: 16px;
-    text-transform: capitalize;
+.album-wrap {
+  background: #fff;
+  padding: 20px;
+  box-shadow: 3px 4px 4px #e9e9e9;
+  border-radius: 5px;
+  border: 1px solid #e1e1e1;
 }
 
-.album-delete-btn{
-    position: absolute;
-    bottom: 15px;
-    right: 0;
+.album-title {
+  color: #a36241;
+  text-transform: uppercase;
+  font-family: 'ralewaymedium';
+  padding-right: 50px;
 }
-.album-action-btn:focus{
-    outline: 0;
+.album-detail-wrap {
+  padding-left: 10px;
 }
-.album-action-btn:hover:active{
-    outline: 0;
-    background: none;
-    border-color: #fff;
+.album-badges-wrap {
+  padding: 15px 0;
 }
-.album-share-btn,.album-edit-btn{
-    position: absolute;
-    top: 16px;
+.album-badge {
+  min-width: 60px;
+  position: relative;
+  float: left;
+  text-align: center;
+  background: #f0f0f0;
+  color: #555;
+  font-size: 11px;
+  margin-right: 5px;
+  border-radius: 5px;
+  padding: 2px 5px;
+  text-transform: capitalize;
 }
-.album-share-btn{
-    right: 20px;
+.updated-info {
+  color: #555;
+  font-size: 13px;
+  padding: 5px 0;
 }
-.album-edit-btn{
-    right: 50px;
+.updated-icon {
+  font-size: 14px;
+  color: #555;
 }
-.album-img-wrap{
-    position: relative;
+.album-separator hr {
+  margin: 15px 0;
+  margin-top: 20px;
 }
-.lock-icon{
-    position: absolute;
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    top: 10px;
-    font-size: 16px;
-    line-height: 30px;
-    right: 20px;
-    z-index: 99;
-    background: #f9a11d;
-    text-align: center;
-    color: #fff;
+.count-main-wrap {
+  margin-top: 5px;
+  color: #555;
+  width: calc(100% - 210px);
+  float: right;
+  margin-top: -50px;
+}
+.count-wrap {
+  border-right: 1px solid #ccc;
+}
+.photo-wrap {
+  width: 115px;
+  padding: 0;
+  padding-right: 20px;
+}
+.view-count-wrap,
+.status-wrap {
+  width: 130px;
+  padding: 0 20px;
+}
+.visible-wrap {
+  width: 170px;
+  padding-right: 0;
+  border: 0;
+}
+.visible-wrap .count-num {
+  margin-left: -7px;
+}
+.count-num {
+  margin-top: 8px;
+}
+.count-detail {
+  float: left;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  font-size: 16px;
+  text-transform: capitalize;
+}
+
+.album-delete-btn {
+  position: absolute;
+  bottom: 15px;
+  right: 0;
+}
+.album-action-btn:focus {
+  outline: 0;
+}
+.album-action-btn:hover:active {
+  outline: 0;
+  background: none;
+  border-color: #fff;
+}
+.album-share-btn,
+.album-edit-btn {
+  position: absolute;
+  top: 16px;
+}
+.album-share-btn {
+  right: 20px;
+}
+.album-edit-btn {
+  right: 50px;
+}
+.album-img-wrap {
+  position: relative;
+}
+.lock-icon {
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  top: 10px;
+  font-size: 16px;
+  line-height: 30px;
+  right: 20px;
+  z-index: 99;
+  background: #f9a11d;
+  text-align: center;
+  color: #fff;
 }
 
 /*common css*/
 
-.text-yellow{
-    color: #f9a11d;
+.custom-pagination {
+  float: right;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
-.text-red{
-   color: #E22122;
+.custom-pagination a {
+  border: 0 !important;
+  color: #555 !important;
 }
-.text-green{
-    color: #00991A;
+.custom-pagination li.active a,
+.custom-pagination li.active a:hover,
+.custom-pagination li.active a:focus,
+.custom-pagination li.active a:active {
+  background: #fff;
+  color: #f9a11d !important;
 }
-
-.custom-pagination{
-    float: right;
-    margin-top: 0;
-    margin-bottom: 30px;
+.custom-pagination li:first-child a {
+  border-top-left-radius: 2em;
+  border-bottom-left-radius: 2em;
+  font-size: 14px !important;
+  padding: 0 5px 0 15px !important;
 }
-.custom-pagination a{
-    border: 0 !important;
-    color: #555 !important;
+.custom-pagination li:last-child a {
+  border-top-right-radius: 2em;
+  border-bottom-right-radius: 2em;
+  padding: 0 15px 0 5px !important;
 }
-.custom-pagination li.active a, .custom-pagination li.active a:hover, .custom-pagination li.active a:focus, .custom-pagination li.active a:active{
-    background: #fff;
-    color: #f9a11d !important;
-}
-.custom-pagination li:first-child a{
-    border-top-left-radius: 2em;
-    border-bottom-left-radius: 2em;
-    font-size: 14px !important; 
-    padding: 0 5px 0 15px !important;
-}
-.custom-pagination li:last-child a{
-    border-top-right-radius: 2em;
-    border-bottom-right-radius: 2em;
-    padding: 0 15px 0 5px !important;
-}
-.custom-pagination li:first-child a span, .custom-pagination li:last-child a span{
-    font-size: 23px !important;
-    color: #f9a11d !important; 
+.custom-pagination li:first-child a span,
+.custom-pagination li:last-child a span {
+  font-size: 23px !important;
+  color: #f9a11d !important;
 }
 
 /*common css ended*/
