implement file upload in contact and remove console and warnings

--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -158,3 +158,8 @@
 div.filepicker {
   padding: 39px !important;
 }
+
+/* contact and testimonial file upload circle */
+.upload-image-thumb-wrap{
+  overflow: hidden;
+}
