--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -158,6 +158,18 @@ div.filepicker {
 }
 
 /* contact and testimonial file upload circle */
-.upload-image-thumb-wrap{
+.upload-image-thumb-wrap {
   overflow: hidden;
+}
+
+/* facebook icon on public pages */
+.fb_btn {
+  position: fixed;
+  right: 0px;
+  top: 300px;
+  z-index: 9999999;
+}
+.facebook-img {
+  height: 100px;
+  width: 30px;
 }
