--- a/src/assets/css/contact/services.css
+++ b/src/assets/css/contact/services.css
@@ -1,34 +1,60 @@
-.service-wrap {
-  padding-top: 92px;
+.service-wrap{
+    padding-top:92px;
+    padding-bottom: 60px;
 }
-.service-thumbs {
-  padding: 15px;
-  box-shadow: 2px 2px 3px #e1e1e1;
-  border-color: #f1f1f1;
+.service-thumbs{
+    padding: 15px;
+    background-color: #fff; /* layer fill content */
+    -moz-box-shadow: 3px 4px 5px rgba(1,1,1,.06); /* drop shadow */
+    -webkit-box-shadow: 3px 4px 5px rgba(1,1,1,.06); /* drop shadow */
+    box-shadow: 3px 4px 5px rgba(1,1,1,.06); /* drop shadow */    
+    border-color: #f1f1f1;
+    border-radius: 0px;
 }
-.service-thumbs img {
-  padding-top: 30px;
+.service-thumbs img{
+    padding-top:20px;
 }
-.sevice-details {
-  padding: 15px 15px 10px;
+.service-title, .service-btn{
+    Text-transform: uppercase;
 }
-.service-title,
-.service-btn {
-  Text-transform: uppercase;
+.service-title{
+    font-size: 16px;
+    letter-spacing: 0.03em;
+    color: #545454;
+    font-family: 'ralewaybold';              
 }
-.service-description {
-  text-align: center;
+.service-description{
+    text-align: center;
+    color: #545454;
+    font-size: 14px;
+    line-height: 20px;
 }
-.service-btn {
-  padding: 8px 20px !important;
-  color: #666 !important;
-  margin-top: 10px;
+.service-description p{
+    text-overflow: ellipsis;
+    height: 38px;
+    /* Required for text-overflow to do anything */
+    overflow: hidden;
+}
+
+.service-btn{
+    padding: 8px 20px !important;
+    color: #f9a11d !important;
+    margin:10px 0 5px;
+    min-width: 160px;
+    min-height: 40px;
+    font-family: 'ralewaymedium';
+    
 }
 .service-btn:hover,
 .service-btn:focus {
-  color: #fff !important;
+    color: #fff !important;
+    outline: none !important;
 }
-.no-m-l-r {
-  margin-left: 0;
-  margin-right: 0;
+.service-thumb-wrap{
+    margin-left: 15px;
+    margin-right: 15px;    
+    width: calc(33% - 30px);
+    display: flex;
+    flex-wrap: wrap;
+    display: inline-block;
 }
