--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -335,86 +335,6 @@ a:focus {
   border-radius: 50%;
 }
 
-/********************
-    Header css
-*********************/
-
-.header.navbar{
-  border-radius:0;
-  border:0;
-  border-bottom:2px solid #f9a11d;
-  background-color :rgba(0, 0, 0, 0.52);
-}
-.header .navbar-brand{
-  min-height: 92px;
-  padding-top: 12px;
-}
-
-/* .header .menu-links{
-  margin-top: 20px;
-} */
-.header .menu-links li a{
-  padding:15px 28px;
-  letter-spacing: 0.08em;
-}
-.header .menu-links li.active a{
-  background: none !important;
-}
-
-.header .menu-links li.active a:before{
-  content: "";
-  background-image: url(../images/header-active.png);
-  height: 20px;
-  width: 20px;
-  left: 0px;
-  top: 30px;
-  position: absolute;
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-.header .menu-links li.active a:after{
-  content: "";
-  background-image: url(../images/header-active.png);
-  height: 20px;
-  width: 20px;
-  right: 0px;
-  top: 0;
-  position: absolute;
-}
-
-.header .menu-links li a{
-  color: #fff !important;
-}
-
-.header .menu-links li.open a{
-  background: none !important;
-}
-
-.header .menu-links .dropdown-menu>li>a:focus,.header .menu-links .dropdown-menu>li>a:hover{
-  outline: none !important;
-  border:none !important;
-  color: #f9a11d !important;
-}
-
-.header .contact-header-links ul{
-  background-color :rgba(0, 0, 0, 0.52);
-  border-radius: 0;
-  margin-top:26px !important;
-}
-/*  .search-wrap{
-  position:relative;
-  width: 250px;
-  float:right;
-}
-.search-options{
-  position: absolute;
-  top: 74px;
-  left: 0;
-} */
-
 /** NAVBAR CSS START **/
 
 .custom-navbar {
@@ -428,9 +348,6 @@ a:focus {
   color: #fff;
   border-radius: 0px;
   margin-bottom: 0px;
-  /* left: 0;
-  position: absolute;
-  top: 0; */
   width: 100%;
   z-index: 1;
 }
@@ -463,33 +380,6 @@ a:focus {
 .custom-navbar .navbar-nav > li > a:focus {
   color: #f9a11d;
 }
-
-/*.custom-navbar .navbar-nav > li > a:hover::after,
-.custom-navbar .navbar-nav > li > a:focus::after{
-	content: "";
-	background-image: url("../images/header-active.png");
-	height: 20px;
-	width: 20px;
-	right: 10px;
-	top: 27px;
-	position: absolute;
-}*/
-
-/*.custom-navbar .navbar-nav > li > a:hover::before,
-.custom-navbar .navbar-nav > li > a:focus::before{
-	content: "";
-	background-image: url("../images/header-active.png");
-	height: 20px;
-	width: 20px;
-	left: 10px;
-	top: 48px;
-	position: absolute;
-	-webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
-}*/
 
 .custom-navbar .navbar-logo {
   padding: 12px;
@@ -547,8 +437,11 @@ a:focus {
 }
 
 .dropdown-menu > li > a:focus,
-.dropdown-menu > li > a:hover {
-  background-color: #f9a11d;
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li.active > a,
+.dropdown-menu > li.active > a:hover {
+  background: transparent;
+  color: #f9a11d;
 }
 
 /********************
