--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -205,3 +205,11 @@ div.filepicker {
   height: 100px;
   width: 30px;
 }
+
+/* testimonial edit delete icon */
+.edit-testimonial-btn {
+  right: 99px !important;
+}
+.testimonial-delete-icon {
+  right: 48px !important;
+}
