--- a/src/assets/css/contact/services.css
+++ b/src/assets/css/contact/services.css
@@ -2,9 +2,12 @@
   padding-top: 92px;
 }
 .service-thumbs {
-  padding: 15px;
+  padding: 15px 15px 5px 15px;
   box-shadow: 2px 2px 3px #e1e1e1;
   border-color: #f1f1f1;
+}
+.service-thumbs .caption{
+  padding:0; 
 }
 .service-thumbs img {
   padding-top: 30px;
@@ -18,6 +21,7 @@
 }
 .service-description {
   text-align: center;
+  min-height: 120px;
 }
 .service-btn {
   padding: 8px 20px !important;
