--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -205,3 +205,20 @@ div.filepicker {
   height: 100px;
   width: 30px;
 }
+
+/* start photo count in portfolio album detail */
+.photo-count-detail {
+  font-size: 16px;
+  position: absolute;
+  right: 15px;
+  top: 70px;
+  z-index: 1;
+  color: #666;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.portfolio-main-title {
+  margin-bottom: 0 !important;
+}
+/* end photo count in portfolio album detail */
