--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -218,3 +218,69 @@ div.filepicker {
 .video-edit-btn {
   right: 20px !important;
 }
+
+/* album detail pic ligtbox wrapper */
+.album-photo-thumbs > img {
+  width: 100%;
+}
+.album-photo-thumbs {
+  position: relative;
+}
+.album-photo-thumbs .overlay:after {
+  content: '';
+  background-image: url('../images/portfolio/hover-design.png');
+  position: absolute;
+  height: 70px;
+  width: 70px;
+  display: none;
+  right: 15px;
+  top: 15px;
+  z-index: 10;
+}
+.album-photo-thumbs .overlay:before {
+  content: '';
+  background-image: url('../images/portfolio/hover-design.png');
+  position: absolute;
+  height: 70px;
+  width: 70px;
+  display: none;
+  left: 15px;
+  bottom: 15px;
+  z-index: 10;
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.album-photo-thumbs:hover .overlay:after,
+.album-photo-thumbs:hover .overlay:before {
+  display: block;
+}
+.album-photo-thumbs .overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: none;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+.album-photo-thumbs:hover .overlay {
+  display: block;
+}
+.portfolio-thumbs-wrap {
+  margin-top: 15px;
+}
+.album-photo-thumbs-wrap .overlay-search {
+  position: absolute;
+  top: 43%;
+  left: 43%;
+  border: 1px solid #f9a11d;
+  padding: 7px;
+}
+
+/* album detail checkbox and cover pic */
+.photo-selection-checkbox,
+.custom-cover-pic {
+  z-index: 1;
+}
