--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -28,6 +28,27 @@
   color: #a64301;
 }
 
+.page-animation-enter {
+  opacity: 0.01;
+}
+.page-animation-enter.page-animation-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.page-animation-leave {
+  opacity: 1;
+}
+.page-animation-leave.page-animation-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+.page-animation-appear {
+  opacity: 0.01;
+}
+.page-animation-appear.page-animation-appear-active {
+  opacity: 0.01;
+}
+
 /* Category delete page custom css start */
 .del_butn,
 .edit-icon {
