--- a/src/assets/css/admin/album/create-album/create-album.css
+++ b/src/assets/css/admin/album/create-album/create-album.css
@@ -77,7 +77,7 @@
   margin-bottom: 25px;
 }
 .custom-form-group.required::after {
-  content: "*";
+  content: '*';
   position: absolute;
   bottom: 30px;
   right: 10px;
@@ -124,8 +124,8 @@
   width: 20px;
   top: 0px;
   left: 0px;
-  transition: border .25s linear;
-  -webkit-transition: border .25s linear;
+  transition: border 0.25s linear;
+  -webkit-transition: border 0.25s linear;
 }
 
 .custom-radio-wrap .check::before {
@@ -144,16 +144,16 @@
   display: none;
 }
 
-.custom-radio-wrap input[type=radio]:checked ~ .check {
+.custom-radio-wrap input[type='radio']:checked ~ .check {
   border: 2px solid #f9a11d;
 }
 
-.custom-radio-wrap input[type=radio]:checked ~ .check::before {
+.custom-radio-wrap input[type='radio']:checked ~ .check::before {
   background: #f9a11d;
   display: block;
 }
 
-.custom-radio-wrap input[type=radio] {
+.custom-radio-wrap input[type='radio'] {
   position: absolute;
   visibility: hidden;
 }
