implemented pagination in VideosListing page

--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -398,3 +398,16 @@ a:visited,
   background: #f9a11d !important;
 }
 /* end pulic view album in Album Listing Page */
+/* start video Listing page */
+.sortBy-records {
+  margin-right: 15px;
+  margin-left: 20px;
+}
+.total-records {
+  font-size: 16px;
+  line-height: 18px;
+  margin-top: 8px;
+  padding-right: 20px;
+  border-right: 1px solid #ccc;
+}
+/* end video Listing page */
